// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderForeground renders correctly 1`] = `
<Component
  alignItems="center"
  flex={1}
>
  <Connect(Header) />
  <Icon
    name="addStepIcon"
    style={
      Object {
        "color": "#52C5DC",
        "fontSize": 40,
      }
    }
    type="MissionHub"
  />
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#52C5DC",
        "fontSize": 36,
        "letterSpacing": 2,
        "lineHeight": 48,
      }
    }
    type="header"
  >
    Add Steps of Faith
  </MyText>
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "lineHeight": 24,
        "paddingBottom": 36,
        "paddingHorizontal": 50,
        "textAlign": "center",
      }
    }
  />
</Component>
`;

exports[`renderStickyHeader renders correctly 1`] = `
<Connect(Header)
  center={
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#ffffff",
          "fontSize": 14,
        }
      }
    >
      ADD STEPS OF FAITH
    </MyText>
  }
/>
`;

exports[`with enableBackButton renders correctly 1`] = `
<Component
  flex={1}
>
  <ParallaxScrollView
    backgroundColor="#007398"
    backgroundScrollSpeed={5}
    contentBackgroundColor="#E6E8EC"
    contentContainerStyle={null}
    fadeOutForeground={true}
    onChangeHeaderVisibility={[Function]}
    outputScaleValue={5}
    parallaxHeaderHeight={240}
    renderBackground={[Function]}
    renderForeground={[Function]}
    renderParallaxHeader={[Function]}
    renderScrollComponent={[Function]}
    renderStickyHeader={[Function]}
    stickyHeaderHeight={65}
  >
    <Connect(Translate(StepsList))
      contactName="roger"
      contactStageId="3"
      onComplete={[MockFunction]}
      organization={
        Object {
          "id": "4234234",
        }
      }
      receiverId="252342354234"
    />
  </ParallaxScrollView>
  <BottomButton
    onPress={[Function]}
    text="CREATE YOUR OWN STEP"
  />
  <Connect(BackButton)
    absolute={true}
    customNavigate={[Function]}
  />
</Component>
`;

exports[`without enableBackButton renders correctly 1`] = `
<Component
  flex={1}
>
  <ParallaxScrollView
    backgroundColor="#007398"
    backgroundScrollSpeed={5}
    contentBackgroundColor="#E6E8EC"
    contentContainerStyle={null}
    fadeOutForeground={true}
    onChangeHeaderVisibility={[Function]}
    outputScaleValue={5}
    parallaxHeaderHeight={240}
    renderBackground={[Function]}
    renderForeground={[Function]}
    renderParallaxHeader={[Function]}
    renderScrollComponent={[Function]}
    renderStickyHeader={[Function]}
    stickyHeaderHeight={65}
  >
    <Connect(Translate(StepsList))
      contactName="roger"
      contactStageId="3"
      onComplete={[MockFunction]}
      organization={
        Object {
          "id": "4234234",
        }
      }
      receiverId="252342354234"
    />
  </ParallaxScrollView>
  <BottomButton
    onPress={[Function]}
    text="CREATE YOUR OWN STEP"
  />
</Component>
`;
